@@ -42,7 +42,7 @@ typedef struct commandHandler
 	cmdCallback (*handler)(char* otherArgs);
 } cmdHdlr;
 
-#define MAX_CMD_TYPES	7
+#define MAX_CMD_TYPES	8
 
 #define MAX_USER_CMD		4
 #define MAX_ENABLE_CMD		4
@@ -51,6 +51,7 @@ typedef struct commandHandler
 #define MAX_CONF_FW_CMD		5
 #define MAX_CONF_RD_CMD		1
 #define MAX_CONF_ACL_CMD	3
+#define MAX_CONF_RIP_CMD	0
 
 static const unsigned short MAX_CMDS[MAX_CMD_TYPES] =
 {
@@ -60,7 +61,8 @@ static const unsigned short MAX_CMDS[MAX_CMD_TYPES] =
 	MAX_CONF_IF_CMD,
 	MAX_CONF_FW_CMD,
 	MAX_CONF_RD_CMD,
-	MAX_CONF_ACL_CMD
+	MAX_CONF_ACL_CMD,
+	MAX_CONF_RIP_CMD
 };
 
 cmdHdlr userCmd[MAX_USER_CMD];
@@ -70,6 +72,7 @@ cmdHdlr confIfCmd[MAX_CONF_IF_CMD];
 cmdHdlr confFWCmd[MAX_CONF_FW_CMD];
 cmdHdlr confRDCmd[MAX_CONF_RD_CMD];
 cmdHdlr confACLCmd[MAX_CONF_ACL_CMD];
+cmdHdlr confRIPCmd[MAX_CONF_RIP_CMD];
 
 cmdHdlr* masterCmd[MAX_CMD_TYPES];
 
@@ -82,6 +85,7 @@ cmdHdlr* masterCmd[MAX_CMD_TYPES];
 #define MAX_CONF_FW_NO_CMD 1
 #define MAX_CONF_RD_NO_CMD 0
 #define MAX_CONF_ACL_NO_CMD 2
+#define MAX_CONF_RIP_NO_CMD 0
 
 static const unsigned short MAX_NO_CMDS[MAX_CMD_TYPES] =
 {
@@ -91,7 +95,8 @@ static const unsigned short MAX_NO_CMDS[MAX_CMD_TYPES] =
 	MAX_CONF_IF_NO_CMD,
 	MAX_CONF_FW_NO_CMD,
 	MAX_CONF_RD_NO_CMD,
-	MAX_CONF_ACL_NO_CMD
+	MAX_CONF_ACL_NO_CMD,
+	MAX_CONF_RIP_NO_CMD
 };
 
 
@@ -102,6 +107,7 @@ cmdHdlr noconfIfCmd[MAX_CONF_IF_NO_CMD];
 cmdHdlr noconfFWCmd[MAX_CONF_FW_NO_CMD];
 cmdHdlr noconfRDCmd[MAX_CONF_RD_NO_CMD];
 cmdHdlr noconfACLCmd[MAX_CONF_ACL_NO_CMD];
+cmdHdlr noconfRIPCmd[MAX_CONF_RIP_NO_CMD];
 
 cmdHdlr* masternoCmd[MAX_CMD_TYPES];
 
