@@ -39,7 +39,8 @@
 #define PROMPT_CONF_FW		4
 #define PROMPT_CONF_RD		5
 #define PROMPT_CONF_ACL 	6
-#define MAX_PROMPTS		7
+#define PROMPT_CONF_ROUTER 	7
+#define MAX_PROMPTS		8
 
 
 #define BLACK 0
